TAREA-1 - crea primer rama

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         />
       </div>
       <nav>
-        <a>Categorias</a>
+        <a href="/">Categorias</a>
       </nav>
     </header>
 
