--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <main></main>
 
-    <footer></footer>
+    <footer id="#footer"></footer>
 
     <script src="./scripts/index.js"></script>
   </body>
