--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
             <h3>🚀 Proyecto educativo Codo a Codo 2024 🚀</h3>
           </div>    
         </footer>
+        <script src="scripts/fuenteiconos.js"></script>
       </body>
 </html>    
