Inicio de sesion y registro simples
se agrego favicon, imagen de logo, un js con fragment de header y footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/stylesHome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="./styles/headerFooter.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -19,34 +20,8 @@
     />
   </head>
       <body>
-        <header class="header">
-          <div>
-            <a href="/">
-              <img
-                src="https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg"
-                alt="logo"
-                width="91"
-                height="94"
-              />
-            </a>
-          </div>
-          <div class="search_container">
-            <button class="search_icon-button">
-              <span class="material-symbols-outlined"> search </span>
-            </button>
-            <input
-              type="text"
-              class="search_input"
-              placeholder="¿Qué te gustaría aprender?"
-            />
-          </div>
-          <nav>
-            <ul>
-              <li class=""><a href="" onclick="route()">Home</a> </li>
-              <li class=""><a href="">Registro</a> </li>
-              <li class=""><a href="formulario_contacto.html">Contacto</a>
-            </ul>
-          </nav>
+        <header>
+         
         </header>
         <!-- Eliminar de aca para arriba si se maneja el enrutamiento de main.js-->
         <main class="main">
@@ -86,10 +61,9 @@
         </main>
 
         <footer>
-          <div>
-            <h3>🚀 Proyecto educativo Codo a Codo 2024 🚀</h3>
-          </div>    
+             
         </footer>
         <script src="scripts/fuenteiconos.js"></script>
+        <script src="./scripts/hf.js"></script>
       </body>
 </html>    
