--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Elearning-grupo20</title>
-    <link rel="icon" type="inage/x-icon"href="img/icono pagina.ico">
+    <link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/stylesHome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
