--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Eliminar de aca para arriba si se maneja el enrutamiento de main.js-->
         <main class="main">
           <section id="home-section">
-            <picture class="main__picture"><img src="./styles/img/home.jpg" width="450" height="450"></picture>
+            <picture class="main__picture"><img src="./assets/img/home.jpg" width="450" height="450"></picture>
             <div class="wrap-home-section">
               <h1><strong>Elearning-grupo20</strong></h1>
 
@@ -40,18 +40,18 @@
                 de esperar tiempos de carga prolongados.</p>
             </div>
             <div class="optionList-section">
-              <img src="./styles/img/excel.jpg" width="200" height="200" alt="Excel">
+              <img src="./assets/img/excel.jpg" width="200" height="200" alt="Excel">
               <h3> Excel</h3>
               <p> Es una aplicación de hoja de cálculo desarrollada por Microsoft para organizar, analizar, graficar y calcular datos. Es una herramienta
                  popular entre contadores, analistas y usuarios del mundo empresarial. En general es una herramienta valiosa para cualquier persona
                 que trabaje con datos, quieres saber más? Sólo tienes que registrarte. </p>
-              <img src="./styles/img/pexels-shvets-production-7516544.jpg" width="200" height="200" alt="Marketing">
+              <img src="./assets/img/pexels-shvets-production-7516544.jpg" width="200" height="200" alt="Marketing">
               <h3> Desarrollador Full Stack</h3>
               <p> También conocido como desarrollador de software, es un profesional que se encarga de diseñar, crear, probar y mantener 
                 programas informáticos. Si te interesa, te invitamos explorar los diferentes tipos de programadores, las habilidades necesarias y los 
                 lenguajes de programación más populares.</p>
                 
-              <img src="./styles/img/english-book-resting-table-working-space.jpg" width="200" height="200" alt="English">
+              <img src="./assets/img/english-book-resting-table-working-space.jpg" width="200" height="200" alt="English">
               <h3>English</h3>
               <p> Aprender inglés en la actualidad se ha convertido en una habilidad fundamental para el desarrollo personal y profesional.
                 Ademas de ser el idioma más hablado de mundo, es considerado el idioma de las oportunidades, te invitamos a aprovechar todo 
