--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bienvenido!</title>
-   
-<link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="./styles/registro.css">
-<link rel="stylesheet" href="./styles/headerFooter.css">
-<link rel="stylesheet" href="./styles/iniciosesion.css">
+
+    <link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/registro.css" />
+    <link rel="stylesheet" href="./styles/headerFooter.css" />
+    <link rel="stylesheet" href="./styles/iniciosesion.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <header></header>
     <main>
-        <section class="banner">
-            <img id="imagenBanner" src="./assets/contactFormImage.jpg" alt="Registro imagen">
-           <h1 id="tituloImagen">Inicio de Sesion</h1> 
-        </section>
-        <section>
-            <form action="" id="inicio">
-                <label for="mail">Email</label>
-                <input type="email" name="mail" id="mail">
+      <section class="banner">
+        <img
+          id="imagenBanner"
+          src="./assets/contactFormImage.jpg"
+          alt="Registro imagen"
+        />
+        <h1 id="tituloImagen">Inicio de Sesion</h1>
+      </section>
+      <section>
+        <form action="" id="inicio">
+          <label for="mail">Email</label>
+          <input type="email" name="mail" id="mail" />
 
-                <label for="contra">Contraseña</label>
-                <input type="password" name="contra" id="contra">
-            </form>
-        </section>
-
+          <label for="contra">Contraseña</label>
+          <input type="password" name="contra" id="contra" />
+        </form>
+      </section>
     </main>
     <footer></footer>
     <script src="./scripts/hf.js"></script>
-</body>
-
+  </body>
 </html>
