--- a/registro.html
+++ b/registro.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registro</title>
-    <link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/registro.css">
-    <link rel="stylesheet" href="./styles/headerFooter.css">
-
-
+    <link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/registro.css" />
+    <link rel="stylesheet" href="./styles/headerFooter.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header></header>
     <main>
-        <section class="banner">
-            <img id="imagenBanner" src="./assets/contactFormImage.jpg" alt="Registro imagen">
-            <h1 id="tituloImagen">Formulario de Registro</h1>
-        </section>
+      <section class="banner">
+        <img
+          id="imagenBanner"
+          src="./assets/contactFormImage.jpg"
+          alt="Registro imagen"
+        />
+        <h1 id="tituloImagen">Formulario de Registro</h1>
+      </section>
 
-        <section class="formularioRegistro">
-            <form action="">
-                <div id="registro">
+      <section class="formularioRegistro">
+        <form action="">
+          <div id="registro">
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre" required />
 
+            <label for="apellido">Apellido</label>
+            <input type="text" name="apellido" id="apellido" required />
 
-                    <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" required>
+            <label for="nacimiento">Fecha de Nacimiento</label>
+            <input type="date" name="nacimiento" id="nacimiento" required />
 
-                    <label for="apellido">Apellido</label>
-                    <input type="text" name="apellido" id="apellido" required>
+            <label for="genero">Genero</label>
+            <select name="genero" id="genero">
+              <option value="femenino">Femenino</option>
+              <option value="masculino">Masculino</option>
+              <option value="nobin">No binario</option>
+              <option value="otro">Otro</option>
+            </select>
 
-                    <label for="nacimiento">Fecha de Nacimiento</label>
-                    <input type="date" name="nacimiento" id="nacimiento" required>
+            <label for="mail">Email</label>
+            <input type="email" name="mail" id="mail" required />
 
-                    <label for="genero">Genero</label>
-                    <select name="genero" id="genero">
-                        <option value="femenino">Femenino</option>
-                        <option value="masculino">Masculino</option>
-                        <option value="nobin">No binario</option>
-                        <option value="otro">Otro</option>
-                    </select>
+            <label for="contra">Contraseña</label>
+            <input type="password" name="contra" id="contra" required />
 
-                    <label for="mail">Email</label>
-                    <input type="email" name="mail" id="mail" required>
+            <label for="contra2">Confirme Contraseña</label>
+            <input type="password" name="contra2" id="contra2" required />
 
-                    <label for="contra">Contraseña</label>
-                    <input type="password" name="contra" id="contra" required>
+            <button type="submit" class="button">Enviar Datos</button>
 
-                    <label for="contra2">Confirme Contraseña</label>
-                    <input type="password" name="contra2" id="contra2" required>
-
-                    <button type="submit" class="button">Enviar Datos</button>
-
-                    <button type="reset" class="button">Borrar Datos</button>
-                </div>
-            </form>
-        </section>
-
-
+            <button type="reset" class="button">Borrar Datos</button>
+          </div>
+        </form>
+      </section>
     </main>
     <footer></footer>
     <script src="./scripts/hf.js"></script>
-</body>
-
+  </body>
 </html>
