--- a/iniciosesion.html
+++ b/iniciosesion.html
@@ -6,12 +6,13 @@
     <title>Bienvenido!</title>
 
     <link rel="shortcut icon" href="./assets/Favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/registro.css" />
     <link rel="stylesheet" href="./styles/headerFooter.css" />
     <link rel="stylesheet" href="./styles/iniciosesion.css" />
+    <link rel="stylesheet" href="./styles//formularios.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -24,26 +25,47 @@
 
   <body>
     <header></header>
-    <main>
+    <main class="iniciosesion_form_wrapper">
       <section class="banner">
         <img
-          id="imagenBanner"
-          src="./assets/contactFormImage.jpg"
+          class="imagenBanner"
+          src="./assets/img/contactFormImage.jpg"
           alt="Registro imagen"
         />
-        <h1 id="tituloImagen">Inicio de Sesion</h1>
+        <div class="iniciosesion_form_title_container">
+          <h1 class="tituloImagen">Inicio de Sesion</h1>
+        </div>
       </section>
       <section>
-        <form action="" id="inicio">
-          <label for="mail">Email</label>
-          <input type="email" name="mail" id="mail" />
+        <form class="form" id="inicio">
+          <div>
+            <h2 class="form_title">Email</h2>
+            <div class="input-container">
+              <label for="mail">
+                <input placeholder="Email" type="email" name="mail" id="mail" />
+              </label>
+            </div>
+          </div>
 
-          <label for="contra">Contraseña</label>
-          <input type="password" name="contra" id="contra" />
+          <div>
+            <h2 class="form_title">Contraseña</h2>
+            <label for="contra">
+              <input
+                placeholder="********"
+                type="password"
+                name="contra"
+                id="contra"
+              />
+            </label>
+          </div>
+          <div class="form_button">
+            <button type="submit">Iniciar Sesión</button>
+          </div>
         </form>
       </section>
     </main>
     <footer></footer>
     <script src="./scripts/hf.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
