TAREA-FORMULARIO_CONTACTO - ajusta home

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   </head>
       <body>
         <header>
-         
         </header>
-        <!-- Eliminar de aca para arriba si se maneja el enrutamiento de main.js-->
         <main class="main">
           <section id="home-section">
             <picture class="main__picture"><img src="./assets/img/home.jpg" width="450" height="450"></picture>
@@ -39,24 +37,26 @@
                 cursos asíncrona que permite a los estudiantes encontrar rápidamente los cursos que les interesan sin necesidad 
                 de esperar tiempos de carga prolongados.</p>
             </div>
-            <div class="optionList-section">
+          </section>
+          <section class="optionList-section">
+            <article>
               <img src="./assets/img/excel.jpg" width="200" height="200" alt="Excel">
               <h3> Excel</h3>
               <p> Es una aplicación de hoja de cálculo desarrollada por Microsoft para organizar, analizar, graficar y calcular datos. Es una herramienta
                  popular entre contadores, analistas y usuarios del mundo empresarial. En general es una herramienta valiosa para cualquier persona
                 que trabaje con datos, quieres saber más? Sólo tienes que registrarte. </p>
+            </article>
+            <article>
               <img src="./assets/img/pexels-shvets-production-7516544.jpg" width="200" height="200" alt="Marketing">
               <h3> Desarrollador Full Stack</h3>
-              <p> También conocido como desarrollador de software, es un profesional que se encarga de diseñar, crear, probar y mantener 
-                programas informáticos. Si te interesa, te invitamos explorar los diferentes tipos de programadores, las habilidades necesarias y los 
+              <p> También conocido como desarrollador de software, es un profesional que se encarga de diseñar, crear, probar y mantener programas informáticos. Si te interesa, te invitamos explorar los diferentes tipos de programadores, las habilidades necesarias y los 
                 lenguajes de programación más populares.</p>
-                
+            </article>
+            <article>
               <img src="./assets/img/english-book-resting-table-working-space.jpg" width="200" height="200" alt="English">
               <h3>English</h3>
-              <p> Aprender inglés en la actualidad se ha convertido en una habilidad fundamental para el desarrollo personal y profesional.
-                Ademas de ser el idioma más hablado de mundo, es considerado el idioma de las oportunidades, te invitamos a aprovechar todo 
-                lo que ofrecemos para que puedas dominar este idioma de forma segura e interactiva.
-            </div>
+              <p> Aprender inglés en la actualidad se ha convertido en una habilidad fundamental para el desarrollo personal y profesional. Ademas de ser el idioma más hablado de mundo, es considerado el idioma de las oportunidades, te invitamos a aprovechar todo lo que ofrecemos para que puedas dominar este idioma de forma segura e interactiva.
+            </article>
           </section>
         </main>
 
